[tool.poetry]
name = "flask-httpauth-without-orm"
version = "0.1.0"
description = "Example of how to use Flask HTTPAuth without ORM."
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/flask-httpauth-without-orm"
repository = "https://github.com/leynier/flask-httpauth-without-orm"
documentation = "https://github.com/leynier/flask-httpauth-without-orm"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
Flask-HTTPAuth = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
